--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "classnames": "^2.5.1",
+    "html-react-parser": "^5.1.8",
     "next": "^14.1.0",
     "node": "^21.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8"
   }
 }
